--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
     "target": "es5",
     "sourceMap": true,
-    "outDir": "build"
+    "outDir": "build",
+    "outFile": "build/app.js"
   },
   "exclude": [
     "node_modules"
